2002-12-17  Bill Nottingham  <notting@redhat.com>

	* Changelog, initscripts.spec: 7.00-1

	* prefdm, sysconfig/network-scripts/network-functions, sysconfig.txt:
	more rhgb tweaks
	have a loop for checking link state instead of a static 'sleep 5'

	* rc.d/init.d/functions, rc.d/rc.sysinit:
	graphical boot changes

2002-12-13  Karsten Hopp  <karsten@redhat.com>

	* ChangeLog, initscripts.spec:
	6.99-1
	
	* initscripts.spec, inittab.s390:
	fix /sbin/update on S/390 as well

2002-12-13  Bill Nottingham  <notting@redhat.com>

	* initscripts.spec: require the dev package

2002-12-09  Bill Nottingham  <notting@redhat.com>

	* ChangeLog, initscripts.spec: 6.98-1

	* rc.d/rc.sysinit: fix netprofile (#72903)

	* inittab: remove call to bdflush stuff

2002-12-02  Bill Nottingham  <notting@redhat.com>

	* ppp/ip-up.ipv6to4, sysconfig/network-scripts/ifup-ipv6, sysconfig/network-scripts/network-functions-ipv6, sysconfig.txt:
	IPv6 update (<pekkas@netcore.fi>, <pb@bieringer.de>)

	* rc.d/rc.sysinit: add devlabel support

	* initscripts.spec, rc.d/init.d/netfs:
	use lazy umount, tweak requires as needed

2002-11-25  Bill Nottingham  <notting@redhat.com>

	* initscripts.spec: learn how to spell

2002-11-19  Florian La Roche  <laroche@redhat.com>

	* initscripts.spec: - mainframe adjustments

2002-11-12  Bill Nottingham  <notting@redhat.com>

	* ChangeLog, initscripts.spec: 6.96-1

	* sysconfig/network-scripts/ifup-aliases:
	just use ifup-routes for aliases

	* sysconfig/network-scripts/ifup-routes, sysconfig.txt:
	fix static route brokenness (#74317, #74320, #76619, #75604)

	* sysconfig.txt:
	clean up clock text (#75069)

	* lang.sh: unset langfile (#75662)

	* setsysfont:
	fix SYSFONTACM handling (#76472)

	* lang.csh:
	fix lang.csh for CJK (#76908, <ynakai@redhat.com>)

	* sysconfig/network-scripts/ifup:
	allow setting of scope (#77082)

	* initscripts.spec:
	buildprereq gettext (#77518)

	* initscripts.spec:
	fix unpackaged files (#77519)
