@@ -1,3 +1,9 @@
+2002-12-30  Florian La Roche <Florian.LaRoche@redhat.de>
+
+	* mainframe: drop changes to "/.unconfigured"
+
+	* mainframe: drop ancient OCO support in startup script
+
 2002-12-17  Bill Nottingham  <notting@redhat.com>
 
 	* Changelog, initscripts.spec: 7.00-1
